// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Documentation: Table BasicTable renders 1`] = `
<Fragment>
  <h2
    id="basic-table"
  >
    Basic table
  </h2>
  <p>
    Basic tables info...
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <DocTable />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Table CondensedTable renders 1`] = `
<Fragment>
  <h2
    id="condensed-table"
  >
    Condensed table
  </h2>
  <p>
    Condensed table info...
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <DocTable
      condensed={true}
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Table DescriptionTable renders 1`] = `
<Fragment>
  <h2
    id="description-table"
  >
    Description table
  </h2>
  <p>
    Description tables info...
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <table
      className="table table-description table-striped"
    >
      <thead>
        <tr>
          <th
            scope="col"
          >
            Key
          </th>
          <th
            scope="col"
          >
            Value
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th
            scope="row"
          >
            Name
          </th>
          <td>
            John Doe
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            Occupation
          </th>
          <td>
            Unknown
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            Skills
          </th>
          <td>
            Unknown
          </td>
        </tr>
      </tbody>
    </table>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Table DocTable renders table with given class name 1`] = `
<table
  className="table"
>
  <thead>
    <tr>
      <th
        scope="col"
      >
        #
      </th>
      <th
        scope="col"
      >
        First Name
      </th>
      <th
        scope="col"
      >
        Last Name
      </th>
      <th
        scope="col"
      >
        Location
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <th
        scope="row"
      >
        1
      </th>
      <td>
        Sven
      </td>
      <td>
        Svensson
      </td>
      <td>
        Visby
      </td>
    </tr>
    <tr>
      <th
        scope="row"
      >
        2
      </th>
      <td>
        Sara
      </td>
      <td>
        Svensson
      </td>
      <td>
        Stockholm
      </td>
    </tr>
    <tr>
      <th
        scope="row"
      >
        3
      </th>
      <td>
        Ola
      </td>
      <td>
        Nordmann
      </td>
      <td>
        Oslo
      </td>
    </tr>
    <tr>
      <th
        scope="row"
      >
        4
      </th>
      <td>
        Holger
      </td>
      <td>
        Danske
      </td>
      <td>
        Copenhagen
      </td>
    </tr>
    <tr>
      <th
        scope="row"
      >
        5
      </th>
      <td>
        Matti
      </td>
      <td>
        Meikäläinen
      </td>
      <td>
        Lahti
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Documentation: Table HoverStripedTable renders 1`] = `
<Fragment>
  <h2
    id="hover-plain-table"
  >
    Hover Plain table
  </h2>
  <p>
    Hover plain tables info...
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <DocTable
      hover={true}
      plain={true}
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Table HoverTable renders 1`] = `
<Fragment>
  <h2
    id="hover-table"
  >
    Hover table
  </h2>
  <p>
    Hover tables info...
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <DocTable
      hover={true}
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Table StripedTable renders 1`] = `
<Fragment>
  <h2
    id="plain-table"
  >
    Plain table
  </h2>
  <p>
    Plain tables info...
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <DocTable
      plain={true}
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Table renders 1`] = `
<DocContainer>
  <p
    className="lead"
  >
    A table displays information in a grid of rows and columns.
  </p>
  <Overview />
</DocContainer>
`;
